--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,12 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout
+	title="Mein persönliches Portfolio - Frank"
+	description="Beispielbeschreibung"
+>
 	<main>
+		<h1>Test</h1>
 	</main>
 </Layout>
 
