--- a/src/pages/ueber-mich.astro
+++ b/src/pages/ueber-mich.astro
@@ -2,7 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout
+	title="Mein persönliches Portfolio - Frank"
+	description="Beispielbeschreibung"
+>
 	<main>
 	</main>
 </Layout>
