--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,9 +42,17 @@ h1, h2, h3, h4, h5 {
 /*
 * Basic
 */
-html {
+html, body {
     font-family: Avenir, sans-serif;
     font-size: clamp(1rem, 0.5313rem + 1.5vw, 1.375rem); /* 16- 22 */
     color: var(--dark);
     background: var(--light);
 }
+
+main {
+    width: 1280px;
+    max-width: 100%;
+    padding: 0 1rem;
+    margin: 0 auto;
+}
+
