--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
 import '@styles/global.css'
+import '@styles/normalize.css'
+import TheHeader from "../components/TheHeader.astro";
+import TheFooter from "../components/TheFooter.astro";
 interface Props {
 	title: string;
 	description: string;
@@ -19,6 +22,8 @@ const { title, description } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<TheHeader />
 		<slot />
+		<TheFooter />
 	</body>
 </html>
