--- a/src/components/TheFooter.astro
+++ b/src/components/TheFooter.astro
@@ -1,26 +1,12 @@
 <footer>
-    <nav>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <a href="/ueber-mich">Über mich</a>
-            </li>
-            <li>
-                <a href="/projekte">Projekte</a>
-            </li>
-            <li>
-                <a href="/kontakt">Kontakt</a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <a href="/datenschutz">Datenschutz</a>
-            </li>
-            <li>
-                <a href="/impressum">Impressum</a>
-            </li>
-        </ul>
-    </nav>
+    <div class="wrapper">
+        <nav>
+            <a href="/">Home</a>
+            <a href="/ueber-mich">Über mich</a>
+            <a href="/projekte">Projekte</a>
+            <a href="/kontakt">Kontakt</a>
+            <a href="/datenschutz">Datenschutz</a>
+            <a href="/impressum">Impressum</a>
+        </nav>
+    </div>
 </footer>
