--- a/src/pages/projekte/index.astro
+++ b/src/pages/projekte/index.astro
@@ -6,8 +6,8 @@ import Layout from '../../layouts/Layout.astro';
 	title="Mein persönliches Portfolio - Frank"
 	description="Beispielbeschreibung"
 >
-	<main>
-	</main>
+	<section>
+	</section>
 </Layout>
 
 <style>
