--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -1,8 +1,10 @@
 <header>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/ueber-mich">Über mich</a>
-        <a href="/projekte">Projekte</a>
-        <a href="/kontakt">Kontakt</a>
-    </nav>
+    <div class="wrapper">
+        <nav>
+            <a href="/">Home</a>
+            <a href="/ueber-mich">Über mich</a>
+            <a href="/projekte">Projekte</a>
+            <a href="/kontakt">Kontakt</a>
+        </nav>
+    </div>
 </header>
