--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,9 @@ const { title, description } = Astro.props;
 	</head>
 	<body>
 		<TheHeader />
-		<slot />
+		<main>
+			<slot />
+		</main>
 		<TheFooter />
 	</body>
 </html>
