--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
 	title="Mein persönliches Portfolio - Frank"
 	description="Beispielbeschreibung"
 >
-	<main>
+	<section>
 		<h1>Heading1</h1>
 		<h2>Heading2</h2>
 		<h3>Heading3</h3>
@@ -29,7 +29,7 @@ import Layout from '../layouts/Layout.astro';
 			<li>Ordered List</li>
 			<li>Ordered List</li>
 		</ol>
-	</main>
+	</section>
 </Layout>
 
 <style>
