--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,3 +61,17 @@ main, .wrapper {
     margin: 0 auto;
 }
 
+/* Small devices */
+@media (min-width: 576px) {}
+
+/* Medium devices */
+@media (min-width: 768px) {}
+
+/* Large devices */
+@media (min-width: 992px) {}
+
+/* X-Large devices */
+@media (min-width: 1200px) {}
+
+/* XX-Large devices */
+@media (min-width: 1400px) {}
