--- a/src/components/TheFooter.astro
+++ b/src/components/TheFooter.astro
@@ -1,12 +1,12 @@
 <footer>
     <div class="wrapper">
         <nav>
-            <a href="/">Home</a>
-            <a href="/ueber-mich">Über mich</a>
-            <a href="/projekte">Projekte</a>
-            <a href="/kontakt">Kontakt</a>
-            <a href="/datenschutz">Datenschutz</a>
-            <a href="/impressum">Impressum</a>
+            <a href="/" rel="prefetch">Home</a>
+            <a href="/ueber-mich" rel="prefetch">Über mich</a>
+            <a href="/projekte" rel="prefetch">Projekte</a>
+            <a href="/kontakt" rel="prefetch">Kontakt</a>
+            <a href="/datenschutz" rel="prefetch">Datenschutz</a>
+            <a href="/impressum" rel="prefetch">Impressum</a>
         </nav>
     </div>
 </footer>
