--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,9 @@
 :root {
     --color-accent: #d40000;
     --color-dark: #333;
+    --color-always-dark: #333;
     --color-light: #f8f9fa;
+    --color-always-light: #f8f9fa;
 }
 @media (prefers-color-scheme: dark) {
     :root {
@@ -60,6 +62,14 @@ main, .wrapper {
     padding: 0 1rem;
     margin: 0 auto;
 }
+main {
+    padding-top: 308px;
+}
+::selection {
+    color: var(--color-light);
+    background-color: var(--color-dark);
+}
+
 
 /* Small devices */
 @media (min-width: 576px) {}
