--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -305,6 +305,8 @@ const currentPath = Astro.url.pathname;
         top: 0;
         transition: top ease 300ms;
         opacity: 1;
+        background-image: unset;
+        box-shadow: 0 10px 30px 5px rgba(0,0,0,0.1)
       }
     }
     .social-wrapper {
