--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -188,6 +188,7 @@ const currentPath = Astro.url.pathname;
 
 <style lang="scss">
   header {
+    z-index: 2;
     background-color: var(--color-always-light);
     background-image: url('/images/background.svg');
   }
