--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import '@styles/global.css'
 import '@styles/normalize.css'
 import TheHeader from "../components/TheHeader.astro";
 import TheFooter from "../components/TheFooter.astro";
+import { ViewTransitions } from 'astro:transitions';
 interface Props {
 	title: string;
 	description: string;
@@ -21,6 +22,7 @@ const { title, description } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<meta name="robots" content="noindex">
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body>
 		<TheHeader />
