--- a/src/components/TheFooter.astro
+++ b/src/components/TheFooter.astro
@@ -4,9 +4,18 @@
             <a href="/" rel="prefetch">Home</a>
             <a href="/ueber-mich" rel="prefetch">Über mich</a>
             <a href="/projekte" rel="prefetch">Projekte</a>
+        </nav>
+        <nav>
             <a href="/kontakt" rel="prefetch">Kontakt</a>
             <a href="/datenschutz" rel="prefetch">Datenschutz</a>
             <a href="/impressum" rel="prefetch">Impressum</a>
         </nav>
     </div>
 </footer>
+
+<style>
+    footer {
+        background-color: var(--color-dark);
+        color: var(--color-light);
+    }
+</style>
