--- a/src/pages/ueber-mich.astro
+++ b/src/pages/ueber-mich.astro
@@ -7,6 +7,11 @@ import Layout from '@layouts/Layout.astro';
 	description="Beispielbeschreibung"
 >
 	<section>
+		<article>
+			<h1>
+				Über mich
+			</h1>
+		</article>
 	</section>
 </Layout>
 
