--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
 import '@styles/global.css'
 import '@styles/normalize.css'
-import TheHeader from "../components/TheHeader.astro";
-import TheFooter from "../components/TheFooter.astro";
+import TheHeader from "@components/TheHeader.astro";
+import TheFooter from "@components/TheFooter.astro";
 import { ViewTransitions } from 'astro:transitions';
 interface Props {
 	title: string;
