--- a/src/pages/projekte/index.astro
+++ b/src/pages/projekte/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '@layouts/Layout.astro';
+import ProjectOverview from "../../components/ProjectOverview.astro";
 ---
 
 <Layout
@@ -7,6 +8,7 @@ import Layout from '@layouts/Layout.astro';
 	description="Beispielbeschreibung"
 >
 	<section>
+		<ProjectOverview />
 	</section>
 </Layout>
 
