--- a/src/pages/projekte/oekologisch.astro
+++ b/src/pages/projekte/oekologisch.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from 'astro:assets';
-import headerImage from '../../assets/projects/1914-in-a-timeline-lg.webp';
+import headerImage from '../../assets/projects/oekologisch-lg.webp';
 import Layout from "../../layouts/Layout.astro";
-const metaTitle = 'Frank - Projekte - GLAMHack';
+const metaTitle = 'Frank - Projekte - Ökologisch';
 const metaDescription = 'MetaDescription';
 ---
 <Layout
@@ -18,7 +18,7 @@ const metaDescription = 'MetaDescription';
             />
         </header>
         <div>
-            <h1>1914 in a timeline - GLAMHack</h1>
+            <h1>Ökologisch</h1>
         </div>
         <footer>
             This is the Footer
