--- a/src/pages/projekte/index.astro
+++ b/src/pages/projekte/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/Layout.astro';
-import ProjectOverview from "../../components/ProjectOverview.astro";
+import ProjectOverview from "@components/ProjectOverview.astro";
 ---
 
 <Layout
