--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,31 +7,20 @@ import ProjectSwiperVue from "@components/ProjectSwiper.vue";
 	title="Mein persönliches Portfolio - Frank"
 	description="Beispielbeschreibung"
 >
-	<h1>Herzlich willkommen auf meinem Portfolio</h1>
-	<ProjectSwiperVue client:load />
 	<section>
-		<h1>Heading1</h1>
-		<h2>Heading2</h2>
-		<h3>Heading3</h3>
-		<h4>Heading4</h4>
-		<h5>Heading5</h5>
+		<h1>Herzlich willkommen auf meinem Portfolio</h1>
+		<ProjectSwiperVue client:load />
 		<p>
-			Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+Ich bin ein Web-Entwickler, der sich auf die Entwicklung von suchmaschinenoptimierten Websites, Web-Applikationen und Progressiven Web Apps spezialisiert hat. Meine Arbeit basiert auf Nuxt JS und Vue JS, um digitale Lösungen zu schaffen, die nicht nur funktional, sondern auch benutzerfreundlich sind. Derzeit tauche ich in die Welt des aufregenden Astro Build Frameworks ein.
+
+Das Astro Framework ist eine aufstrebende Plattform für die Webentwicklung. Es zeichnet sich durch seine Geschwindigkeit und Effizienz aus. Mit Astro können Websites erstellt werden, die nicht nur extrem schnell geladen werden, sondern auch sicher und suchmaschinenfreundlich sind. Es ist die perfekte Wahl für Entwickler, die Performance und SEO im Blick behalten möchten.
+
+Neben meiner Arbeit an Websites entwickle ich auch HTML-Spiele. Dabei verlasse ich mich auf das Phaser-Framework, um unterhaltsame und interaktive Spiele zu gestalten.
+
+Möchten Sie mehr über mich erfahren? Besuchen Sie die "Über mich"-Seite, auf der Sie mich näher kennenlernen können. Auf der "Projekte"-Seite stelle ich Ihnen verschiedene meiner Arbeiten vor. Hier erhalten Sie Einblicke in meine bisherigen Projekte und können sich von meiner Arbeit inspirieren lassen.
+
+Ich freue mich darauf, die digitale Welt mit Ihnen zu erkunden und stehe für Fragen und mögliche Zusammenarbeiten gerne zur Verfügung.
 		</p>
-		<ul>
-			<li>Unordered List</li>
-			<li>Unordered List</li>
-			<li>Unordered List</li>
-			<li>Unordered List</li>
-			<li>Unordered List</li>
-		</ul>
-		<ol>
-			<li>Ordered List</li>
-			<li>Ordered List</li>
-			<li>Ordered List</li>
-			<li>Ordered List</li>
-			<li>Ordered List</li>
-		</ol>
 	</section>
 </Layout>
 
