--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -7,28 +7,14 @@ import Layout from '@layouts/Layout.astro';
 	description="Beispielbeschreibung"
 >
 	<section>
-		<h1>Heading1</h1>
-		<h2>Heading2</h2>
-		<h3>Heading3</h3>
-		<h4>Heading4</h4>
-		<h5>Heading5</h5>
-		<p>
-			Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-		</p>
-		<ul>
-			<li>Unordered List</li>
-			<li>Unordered List</li>
-			<li>Unordered List</li>
-			<li>Unordered List</li>
-			<li>Unordered List</li>
-		</ul>
-		<ol>
-			<li>Ordered List</li>
-			<li>Ordered List</li>
-			<li>Ordered List</li>
-			<li>Ordered List</li>
-			<li>Ordered List</li>
-		</ol>
+		<h1>
+			Kontaktiere mich
+	</h1>
+	<p>
+Möchten Sie mit mir in Kontakt treten? Ich freue mich darauf, von Ihnen zu hören! Auf dieser Seite finden Sie ein benutzerfreundliches Kontaktformular, das es Ihnen ermöglicht, mir Ihre Anliegen, Fragen oder Anfragen bequem zuzusenden.
+
+Füllen Sie einfach das Formular aus, geben Sie Ihre Kontaktdaten an und schreiben Sie Ihre Nachricht. Ich werde mich so bald wie möglich bei Ihnen melden.
+	</p>
 	</section>
 </Layout>
 
