--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -7,6 +7,70 @@ import Layout from '@layouts/Layout.astro';
 	description="Beispielbeschreibung"
 >
 	<section>
+<h1>Impressum</h1>
+<p>
+<b>Verantwortlich für den Inhalt dieser Website:</b>
+[Name oder Firmenname]
+[Adresse]
+[PLZ und Ort]
+[Telefonnummer]
+[E-Mail-Adresse]
+</p>
+
+<p>
+<b>Vertreten durch:</b>
+[Name des Vertretungsberechtigten, falls zutreffend]
+</p>
+
+<p>
+<b>UID (Unsere Umsatzsteuer-Identifikationsnummer):</b>
+[UID-Nummer, falls vorhanden]
+</p>
+
+<p>
+<b>Registereintrag (falls vorhanden):</b>
+[Registernummer und Registergericht]
+</p>
+
+<p>
+<b>Datenschutzbeauftragter:</b>
+[Name und Kontaktinformationen des Datenschutzbeauftragten, falls erforderlich]
+</p>
+
+<p>
+<b>Inhaltlich verantwortlich gemäß Art. 4 DSGVO:</b>
+[Name des Verantwortlichen]
+[Adresse]
+[PLZ und Ort]
+</p>
+
+<p>
+<b>EU-Datenschutz-Grundverordnung (DSGVO) und Datenschutz in der Schweiz:</b>
+Wir beachten die Datenschutzbestimmungen der DSGVO der EU und die Datenschutzgesetze der Schweiz. Weitere Informationen finden Sie in unserer Datenschutzerklärung.
+</p>
+
+<p>
+<b>Haftungshinweis:</b>
+Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.
+</p>
+
+<p>
+<b>Bildnachweise:</b>
+[Angabe der Urheberrechte für verwendete Bilder, falls erforderlich]
+</p>
+
+<p>
+<b>Nutzungsbedingungen:</b>
+[Link zu den Nutzungsbedingungen]
+</p>
+
+<p>
+<b>Kontakt:</b>
+[Hier ggf. ein Link oder Kontaktformular zur Kontaktseite einfügen]
+</p>
+<p>
+Stand: [Aktualisiertes Datum]
+</p>
 	</section>
 </Layout>
 
