--- a/src/pages/projekte/index.astro
+++ b/src/pages/projekte/index.astro
@@ -9,6 +9,18 @@ import ProjectOverview from "@components/ProjectOverview.astro";
 >
 	<section>
 		<ProjectOverview />
+<p>
+Willkommen auf meiner Projekte-Seite, auf der Sie eine Auswahl meiner Arbeiten finden. Diese Projekte sind vielfältig und repräsentieren meine Webentwicklungskompetenz, von Nuxt JS und Vue JS bis hin zu Astro Build und WordPress.
+</p>
+
+<p>
+Jedes Projekt erzählt seine eigene Geschichte, sei es eine SEO-optimierte Website, eine benutzerfreundliche Web-Applikation oder eine Progressive Web App. Ich arbeite mit einer breiten Palette von Technologien, um die Anforderungen meiner Kunden zu erfüllen.
+</p>
+
+<p>
+Entdecken Sie meine Projekte und erhalten Sie Einblicke in meine vielseitige Arbeit. Wenn Sie weitere Informationen zu einem bestimmten Projekt wünschen, stehe ich Ihnen gerne zur Verfügung.
+</p>
+
 	</section>
 </Layout>
 
