--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -1,4 +1,4 @@
----
+=---
 import Layout from '@layouts/Layout.astro';
 ---
 
@@ -7,6 +7,78 @@ import Layout from '@layouts/Layout.astro';
 	description="Beispielbeschreibung"
 >
 	<section>
+<h1>Datenschutzerklärung</h1>
+<p>
+Diese Datenschutzerklärung informiert Sie darüber, wie wir personenbezogene Daten auf unserer Website [Ihre Website-URL] (im Folgenden "Website") sammeln, verwenden und schützen.
+</p>
+
+<p>
+<b>1. Verantwortliche Stelle</b>
+<br>
+Verantwortlich für die Datenverarbeitung auf dieser Website ist:
+<br>
+
+[Ihr Name oder Firmenname]
+[Ihre Adresse]
+[Ihre Stadt und Postleitzahl]
+[E-Mail-Adresse]
+</p>
+
+<p>
+<b>2. Erhebung und Verarbeitung von Daten</b>
+<ul>
+<li>
+Beim Besuch unserer Website werden bestimmte Daten automatisch erfasst, wie Ihre IP-Adresse, Browsertyp, Gerätetyp, Verweildauer auf der Website und besuchte Seiten. Diese Informationen dienen der Analyse und Verbesserung unserer Website und werden anonymisiert gespeichert.
+</li>
+<li>
+Wenn Sie das Kontaktformular auf unserer Website nutzen, erfassen wir die von Ihnen bereitgestellten Daten, einschließlich Ihres Namens, Ihrer E-Mail-Adresse und Ihrer Nachricht. Diese Daten werden verwendet, um auf Ihre Anfrage zu antworten und zur Kommunikation mit Ihnen.
+</li>
+</ul>
+</p>
+
+<p>
+<b>3. Matomo (Piwik) Analytics</b>
+<br>
+Diese Website verwendet Matomo (ehemals Piwik), ein Open-Source-Analysetool. Matomo verwendet Cookies, um Informationen über die Nutzung unserer Website zu sammeln. Diese Daten helfen uns, die Website zu verbessern und unser Angebot besser auf die Bedürfnisse unserer Besucher abzustimmen. Die IP-Adressen der Besucher werden anonymisiert, bevor sie gespeichert werden.
+</p>
+
+<p>
+<b>4. Cookies</b>
+
+Wir verwenden keine zusätzlichen Cookies auf unserer Website.
+</p>
+
+<p>
+<b>5. Weitergabe von Daten</b>
+
+Ihre personenbezogenen Daten werden nicht an Dritte weitergegeben, es sei denn, Sie haben ausdrücklich Ihr Einverständnis gegeben oder wir sind gesetzlich dazu verpflichtet.
+<p>
+
+<p>
+<b>6. Ihre Rechte</b>
+
+Sie haben das Recht, Auskunft über die von uns gespeicherten Daten zu erhalten, sowie das Recht auf Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer Daten. Bitte kontaktieren Sie uns, um Ihre Rechte auszuüben.
+</p>
+
+<p>
+<b>7. Änderungen dieser Datenschutzerklärung</b>
+
+Diese Datenschutzerklärung kann aktualisiert werden, um Änderungen in unseren Datenschutzpraktiken widerzuspiegeln. Wir empfehlen Ihnen, diese Seite regelmäßig zu überprüfen, um auf dem neuesten Stand zu bleiben.
+</p>
+
+<p>
+<b>8. Kontakt</b>
+
+Wenn Sie Fragen oder Anliegen bezüglich unserer Datenschutzerklärung haben, kontaktieren Sie uns bitte:
+<br>
+[Ihr Name oder Firmenname]
+[Ihre Adresse]
+[E-Mail-Adresse]
+</p>
+
+<p>
+<b>Stand: [Aktualisiertes Datum]</b>
+</p>
 	</section>
 </Layout>
 
