--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,19 +11,19 @@ import ProjectSwiperVue from "@components/ProjectSwiper.vue";
 		<h1>Herzlich willkommen auf meinem Portfolio</h1>
 		<ProjectSwiperVue client:load />
 		<p>
-Ich bin ein Web-Entwickler, der sich auf die Entwicklung von suchmaschinenoptimierten Websites, Web-Applikationen und Progressiven Web Apps spezialisiert hat. Meine Arbeit basiert auf Nuxt JS und Vue JS, um digitale Lösungen zu schaffen, die nicht nur funktional, sondern auch benutzerfreundlich sind. Derzeit tauche ich in die Welt des aufregenden Astro Build Frameworks ein.
+Ich bin ein Web-Entwickler, der sich auf die Entwicklung von <b>suchmaschinenoptimierten Websites, Web-Applikationen und Progressiven Web Apps</b> spezialisiert hat. Meine Arbeit basiert auf Nuxt JS und Vue JS, um digitale Lösungen zu schaffen, die nicht nur <b>funktional</b>, sondern auch <b>benutzerfreundlich</b> sind. Derzeit tauche ich in die Welt des aufregenden Astro Build Frameworks ein.
 		</p>
 		<p>
-Das Astro Framework ist eine aufstrebende Plattform für die Webentwicklung. Es zeichnet sich durch seine Geschwindigkeit und Effizienz aus. Mit Astro können Websites erstellt werden, die nicht nur extrem schnell geladen werden, sondern auch sicher und suchmaschinenfreundlich sind. Es ist die perfekte Wahl für Entwickler, die Performance und SEO im Blick behalten möchten.
+Das Astro Framework ist eine aufstrebende Plattform für die Webentwicklung. Es zeichnet sich durch seine Geschwindigkeit und Effizienz aus. Mit Astro können Websites erstellt werden, die nicht nur <b>extrem schnell geladen werden, sondern auch sicher und suchmaschinenfreundlich</b> sind. Es ist die perfekte Wahl für Entwickler, die <b>Performance und SEO</b> im Blick behalten möchten.
 </p>
 <p>
-Neben meiner Arbeit an Websites entwickle ich auch HTML-Spiele. Dabei verlasse ich mich auf das Phaser-Framework, um unterhaltsame und interaktive Spiele zu gestalten.
+Neben meiner Arbeit an Websites entwickle ich auch <b>HTML-Games</b>. Dabei verlasse ich mich auf das Phaser-Framework, um unterhaltsame und interaktive Spiele zu gestalten.
 </p>
 <p>
-Möchten Sie mehr über mich erfahren? Besuchen Sie die "Über mich"-Seite, auf der Sie mich näher kennenlernen können. Auf der "Projekte"-Seite stelle ich Ihnen verschiedene meiner Arbeiten vor. Hier erhalten Sie Einblicke in meine bisherigen Projekte und können sich von meiner Arbeit inspirieren lassen.
+Möchtest du mehr über mich erfahren? Besuche die "Über mich"-Seite, auf der du mich näher kennenlernen kannst. Auf der "Projekte"-Seite stelle ich dir ausserdem verschiedene meiner Arbeiten vor. Hier erhaltest du Einblicke in meine bisherigen Projekte und du kannst dich von meiner Arbeit inspirieren lassen.
 </p>
 <p>
-Ich freue mich darauf, die digitale Welt mit Ihnen zu erkunden und stehe für Fragen und mögliche Zusammenarbeiten gerne zur Verfügung.
+Ich freue mich darauf, die digitale Welt mit dir zu erkunden und stehe für Fragen jeglicher Art gerne zur Verfügung. Kontaktiere mich hierfür über das Kontaktformular oder schreibe mir einfach eine Mail.
 		</p>
 	</section>
 </Layout>
