--- a/src/pages/ueber-mich.astro
+++ b/src/pages/ueber-mich.astro
@@ -11,6 +11,26 @@ import Layout from '@layouts/Layout.astro';
 			<h1>
 				Über mich
 			</h1>
+<p>
+Willkommen auf meiner "Über mich"-Seite. Mein Leben ist vielfältig und von Leidenschaft geprägt. Abseits des digitalen Universums zieht es mich immer wieder in die Natur. <br>Wandern, Angeln und Fotografieren</b> sind für mich nicht nur Hobbys, sondern eine Möglichkeit, dem hektischen Alltag zu entfliehen und in der Ruhe der Natur neue Energie zu tanken.
+</p>
+
+<p>
+<b>Sport</b> spielt eine bedeutende Rolle in meinem Leben. Als Mitglied des Tennisclubs Zizers tausche ich gerne meine Tastatur gegen einen Tennisschläger. Zusätzlich bin ich seit einiger Zeit in einem <b>Unihockey</b>-Plauschverein aktiv, der die Freude am Spiel und den Teamgeist fördert. Kürzlich habe ich das <b>Laufen</b> für mich entdeckt, da es mir eine willkommene Möglichkeit bietet, den Kopf frei zu bekommen und gleichzeitig etwas Gutes für meinen Körper zu tun.
+</p>
+
+
+<p>
+Meine berufliche Reise begann mit einer <b>Lehre als Informatiker Fachrichtung Systemtechnik</b> beim Amt für Informatik des Kantons Graubünden. Nach Abschluss meiner Lehre folgte die <b>technische Berufsmatura</b>, die mein Wissen vertiefte. Anschliessend diente ich in der <b>Schule für elektronische Kriegsführung (EKS)</b> und erlangte den Rang eines Wachtmeisters als Funkaufklärer während meines Militärdienstes.
+</p>
+
+<p>
+Meine akademische Reise führte mich von 2018 bis 2021 an die FHGR, wo ich <b>Multimedia Production</b> studierte und meinen Bachelor erfolgreich abschloss. Schon während meines Studiums im Jahr 2020 stiess ich auf <b>Code Crush</b> und bin seitdem ein engagiertes Mitglied dieses Teams, das digitale Welten erschafft und kreative Lösungen entwickelt.
+</p>
+
+<p>
+All diese Erfahrungen haben mich geprägt und mir geholfen, zu werden, wer ich heute bin. Ich schätze die Natur, lebe aktiv und fühle mich sowohl in der digitalen als auch in der realen Welt sehr wohl.
+</p>
 		</article>
 	</section>
 </Layout>
